@@ -230,6 +230,10 @@
        Fixed missing parser definitions in the <a href="../tutorial.html#parsing-json">Parsing JSON</a> section of the tutorial spotted by Josh
        Quintus – thanks Josh!
       </li>
+      <li class="_3">
+       <a href="https://github.com/stephan-tolksdorf/fparsec/pull/18">Fixed</a> parser definitions in the <a
+       href="../users-guide/where-is-the-monad.html">Where is the monad</a> section of the User’s Guide found by Andre Wesseling – thanks Andre!
+      </li>
      </ul>
     </div>
    </div>
