@@ -259,7 +259,7 @@
 <span class="ck">let</span> <span class="ci">number_ws</span> <span class="cp">=</span> <a href="../reference/charparsers.html#members.pfloat"><span class="ci">pfloat</span></a> <a href="../reference/primitives.html#members...:62::62:"><span class="co">.&gt;&gt;</span></a> <span class="ci">ws</span>
 
 <span class="ck">let</span> <span class="ci">pairOfNumbers</span> <span class="cp">=</span> <a href="../reference/primitives.html#members.between"><span class="ci">between</span></a> <span class="cp">(</span><span class="ci">str_ws</span> <span class="cs"><span class="cld">"</span>(<span class="crd">"</span></span><span class="cp">)</span> <span class="cp">(</span><span class="ci">str_ws</span> <span class="cs"><span class="cld">"</span>)<span class="crd">"</span></span><span class="cp">)</span>
-                            <span class="cp">(</span><a href="../reference/primitives.html#members.tuple2"><span class="ci">tuple2</span></a> <span class="ci">number1</span> <span class="ci">number2</span><span class="cp">)</span>
+                            <span class="cp">(</span><a href="../reference/primitives.html#members.tuple2"><span class="ci">tuple2</span></a> <span class="ci">number_ws</span> <span class="ci">number_ws</span><span class="cp">)</span>
 </pre>
     </div>
     <div class="para _5">
